build/log/idf_py_stdout_output_396546
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/artur/projects/personal/kairos/build/bootloader/esp-idf/esptool_py && /home/artur/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/artur/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/artur/projects/personal/kairos/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[3/9] Building C object esp-idf/core/CMakeFiles/__idf_core.dir/test/i2c_scanner.c.obj
FAILED: esp-idf/core/CMakeFiles/__idf_core.dir/test/i2c_scanner.c.obj 
/home/artur/.espressif/tools/xtensa-esp32-elf/esp-2022r1-RC1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc  -I/home/artur/projects/personal/kairos/build/config -I/home/artur/projects/personal/kairos/components/core -I/home/artur/projects/personal/kairos/components/core/test -I/home/artur/esp/esp-idf/components/newlib/platform_include -I/home/artur/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/artur/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/artur/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/artur/esp/esp-idf/components/freertos/esp_additions/include -I/home/artur/esp/esp-idf/components/esp_hw_support/include -I/home/artur/esp/esp-idf/components/esp_hw_support/include/soc -I/home/artur/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/artur/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/artur/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/artur/esp/esp-idf/components/heap/include -I/home/artur/esp/esp-idf/components/log/include -I/home/artur/esp/esp-idf/components/soc/include -I/home/artur/esp/esp-idf/components/soc/esp32/. -I/home/artur/esp/esp-idf/components/soc/esp32/include -I/home/artur/esp/esp-idf/components/hal/esp32/include -I/home/artur/esp/esp-idf/components/hal/include -I/home/artur/esp/esp-idf/components/hal/platform_port/include -I/home/artur/esp/esp-idf/components/esp_rom/include -I/home/artur/esp/esp-idf/components/esp_rom/include/esp32 -I/home/artur/esp/esp-idf/components/esp_rom/esp32 -I/home/artur/esp/esp-idf/components/esp_common/include -I/home/artur/esp/esp-idf/components/esp_system/include -I/home/artur/esp/esp-idf/components/esp_system/port/soc -I/home/artur/esp/esp-idf/components/esp_system/port/include/private -I/home/artur/esp/esp-idf/components/xtensa/include -I/home/artur/esp/esp-idf/components/xtensa/esp32/include -I/home/artur/esp/esp-idf/components/lwip/include -I/home/artur/esp/esp-idf/components/lwip/include/apps -I/home/artur/esp/esp-idf/components/lwip/include/apps/sntp -I/home/artur/esp/esp-idf/components/lwip/lwip/src/include -I/home/artur/esp/esp-idf/components/lwip/port/esp32/include -I/home/artur/esp/esp-idf/components/lwip/port/esp32/include/arch -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-error=format= -Wno-format -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/artur/projects/personal/kairos=. -fmacro-prefix-map=/home/artur/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dev-4547-gfde4afc67a\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/core/CMakeFiles/__idf_core.dir/test/i2c_scanner.c.obj -MF esp-idf/core/CMakeFiles/__idf_core.dir/test/i2c_scanner.c.obj.d -o esp-idf/core/CMakeFiles/__idf_core.dir/test/i2c_scanner.c.obj -c /home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c: In function 'task_i2cscanner':
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:6:9: error: unknown type name 'i2c_config_t'
    6 |         i2c_config_t conf;
      |         ^~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:7:13: error: request for member 'mode' in something not a structure or union
    7 |         conf.mode = I2C_MODE_MASTER;
      |             ^
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:7:21: error: 'I2C_MODE_MASTER' undeclared (first use in this function)
    7 |         conf.mode = I2C_MODE_MASTER;
      |                     ^~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:7:21: note: each undeclared identifier is reported only once for each function it appears in
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:8:13: error: request for member 'sda_io_num' in something not a structure or union
    8 |         conf.sda_io_num = SDA_PIN;
      |             ^
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:9:13: error: request for member 'scl_io_num' in something not a structure or union
    9 |         conf.scl_io_num = SCL_PIN;
      |             ^
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:10:13: error: request for member 'sda_pullup_en' in something not a structure or union
   10 |         conf.sda_pullup_en = GPIO_PULLUP_ENABLE;
      |             ^
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:10:30: error: 'GPIO_PULLUP_ENABLE' undeclared (first use in this function)
   10 |         conf.sda_pullup_en = GPIO_PULLUP_ENABLE;
      |                              ^~~~~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:11:13: error: request for member 'scl_pullup_en' in something not a structure or union
   11 |         conf.scl_pullup_en = GPIO_PULLUP_ENABLE;
      |             ^
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:12:13: error: request for member 'master' in something not a structure or union
   12 |         conf.master.clk_speed = 100000;
      |             ^
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:13:9: error: implicit declaration of function 'i2c_param_config' [-Werror=implicit-function-declaration]
   13 |         i2c_param_config(I2C_NUM_0, &conf);
      |         ^~~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:13:26: error: 'I2C_NUM_0' undeclared (first use in this function)
   13 |         i2c_param_config(I2C_NUM_0, &conf);
      |                          ^~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:15:9: error: implicit declaration of function 'i2c_driver_install' [-Werror=implicit-function-declaration]
   15 |         i2c_driver_install(I2C_NUM_0, I2C_MODE_MASTER, 0, 0, 0);
      |         ^~~~~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:22:17: error: unknown type name 'i2c_cmd_handle_t'; did you mean 'intr_handle_t'?
   22 |                 i2c_cmd_handle_t cmd = i2c_cmd_link_create();
      |                 ^~~~~~~~~~~~~~~~
      |                 intr_handle_t
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:22:40: error: implicit declaration of function 'i2c_cmd_link_create' [-Werror=implicit-function-declaration]
   22 |                 i2c_cmd_handle_t cmd = i2c_cmd_link_create();
      |                                        ^~~~~~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:23:17: error: implicit declaration of function 'i2c_master_start' [-Werror=implicit-function-declaration]
   23 |                 i2c_master_start(cmd);
      |                 ^~~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:24:17: error: implicit declaration of function 'i2c_master_write_byte' [-Werror=implicit-function-declaration]
   24 |                 i2c_master_write_byte(cmd, (i << 1) | I2C_MASTER_WRITE, 1 /* expect ack */);
      |                 ^~~~~~~~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:24:55: error: 'I2C_MASTER_WRITE' undeclared (first use in this function)
   24 |                 i2c_master_write_byte(cmd, (i << 1) | I2C_MASTER_WRITE, 1 /* expect ack */);
      |                                                       ^~~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:25:17: error: implicit declaration of function 'i2c_master_stop' [-Werror=implicit-function-declaration]
   25 |                 i2c_master_stop(cmd);
      |                 ^~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:27:25: error: implicit declaration of function 'i2c_master_cmd_begin' [-Werror=implicit-function-declaration]
   27 |                 espRc = i2c_master_cmd_begin(I2C_NUM_0, cmd, 10/portTICK_PERIOD_MS);
      |                         ^~~~~~~~~~~~~~~~~~~~
/home/artur/projects/personal/kairos/components/core/test/i2c_scanner.c:37:17: error: implicit declaration of function 'i2c_cmd_link_delete' [-Werror=implicit-function-declaration]
   37 |                 i2c_cmd_link_delete(cmd);
      |                 ^~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
